--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"lodash": "^4.17.21",
 		"mongoose": "^5.11.17",
 		"multer": "^1.4.2",
+		"sharp": "^0.27.2",
 		"winston": "^3.3.3"
 	},
 	"jest": {
