--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"http": "^0.0.1-security",
 		"joi": "^17.4.0",
 		"joi-objectid": "^3.0.1",
+		"joi-password-complexity": "^5.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
 		"mongoose": "^5.11.17",
