--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
 		"express-fileupload": "^1.2.1",
+		"helmet": "^4.4.1",
 		"http": "^0.0.1-security",
 		"joi": "^17.4.0",
 		"joi-objectid": "^3.0.1",
