--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "buxapi",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "",
-	"main": "index.js",
+	"main": "api/index.js",
 	"scripts": {
-		"start": "pm2 start index.js",
-		"dev": "nodemon index.js",
+		"start": "node api/index.js",
+		"dev": "nodemon api/index.js",
 		"test": "jest --watchAll --maxWorkers=1"
 	},
 	"author": "",
