--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"testEnvironment": "node"
 	},
 	"devDependencies": {
+		"@vercel/node": "^1.9.1",
 		"jest": "^26.6.3",
 		"supertest": "^6.1.3"
 	}
