--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "buxapi",
 	"version": "1.0.1",
 	"description": "",
-	"main": "api/index.js",
+	"main": "index.js",
 	"scripts": {
-		"start": "node api/index.js",
-		"dev": "nodemon api/index.js",
+		"start": "node index.js",
+		"dev": "nodemon index.js",
 		"test": "jest --watchAll --maxWorkers=1"
 	},
 	"author": "",
