--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"mongodb": "^3.6.5",
 		"mongoose": "^5.12.2",
 		"multer": "^1.4.2",
-		"sharp": "^0.27.2",
+		"sharp": ">=0.30.5",
 		"winston": "^3.3.3"
 	},
 	"jest": {
